--- a/C#/LoginRegCore/LoginRegCore/LoginRegCore.csproj
+++ b/C#/LoginRegCore/LoginRegCore/LoginRegCore.csproj
@@ -7,10 +7,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-    <PackageReference Include="EntityFramework" Version="6.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Views\Notes\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Views\Notes\NoteRenderID.cshtml" />
   </ItemGroup>
 </Project>
